--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="?android:attr/colorPrimary"
     android:divider="@drawable/clouds"
     android:gravity="center"
     android:orientation="vertical">
 
     <fragment
+        android:id="@+id/navHostFragmentRoot"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.mikhail.weatherclient.presentation.fragments.MainFragment"
+        tools:ignore="FragmentTagUsage" />
+
+    <!--<fragment
         android:id="@+id/weathertodayfragment"
         android:tag="frament_weather_today"
-        android:name="com.mikhail.weatherclient.fragments.WeatherTodayFragment"
+        android:name="com.mikhail.weatherclient.presentation.fragments.WeatherTodayFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
@@ -21,13 +28,13 @@
         android:id="@+id/timeandtemptoday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:name="com.mikhail.weatherclient.fragments.TimeAndTempTodayFragment"
+        android:name="com.mikhail.weatherclient.presentation.fragments.TimeAndTempTodayFragment"
         tools:layout="@layout/time_and_temp_today_fragment" />
     <fragment
         android:id="@+id/weatherfragment"
-        android:name="com.mikhail.weatherclient.fragments.WeatherFragment"
+        android:name="com.mikhail.weatherclient.presentation.fragments.WeatherFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        tools:layout="@layout/fragment_weather" tools:targetApi="o"/>
+        tools:layout="@layout/fragment_weather" />-->
 </LinearLayout>
