--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragments.WeatherFragment"
+    tools:context=".presentation.fragments.WeatherFragment"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/colorPrimary"
