--- a/app/src/main/res/layout/dayofweek_item.xml
+++ b/app/src/main/res/layout/dayofweek_item.xml
@@ -42,7 +42,6 @@
         android:layout_weight="1"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="@string/_3"
         android:textAlignment="viewStart"
         android:textColor="@color/textColorPrimary"
         android:textSize="20sp"
@@ -55,15 +54,13 @@
         android:id="@+id/maxtemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:layout_weight="1"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:text="@string/_10"
         android:textAlignment="viewStart"
         android:textColor="@color/textColorPrimary"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.900"
-        app:layout_constraintStart_toStartOf="@id/mintemp"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
