--- a/app/src/main/res/layout/city_changer.xml
+++ b/app/src/main/res/layout/city_changer.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:tag="city_changer"
     android:background="?android:attr/colorPrimary"
     android:orientation="vertical">
 
@@ -15,13 +17,12 @@
         android:gravity="center"
         android:text="@string/select_city"
         android:textColor="@color/textColorPrimary"
-        android:textSize="24sp"></TextView>
+        android:textSize="24sp" />
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputcity"
@@ -34,12 +35,11 @@
             android:textColor="@color/textColorPrimary" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.mikhail.weatherclient.presentation.fragments.CityFragment"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/selectCityRecyclerView"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_city" />
+        android:layout_height="wrap_content"/>
 
     <Switch
         android:id="@+id/info"
@@ -72,7 +72,7 @@
 
 
     <Button
-        android:id="@+id/savecity"
+        android:id="@+id/okButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
